SImplify ui files

--- a/ui/account-create-widget.ui
+++ b/ui/account-create-widget.ui
@@ -11,39 +11,31 @@
     <property name="margin-end">20</property>
     <property name="spacing">24</property>
     <signal name="delete_event" handler="delete_event_cb" swapped="no"/>
-
     <child>
       <object class="GtkImage">
-        <property name="visible">1</property>
         <property name="icon-name">corebird</property>
         <property name="halign">center</property>
         <property name="margin-bottom">24</property>
         <property name="pixel-size">128</property>
       </object>
     </child>
-
     <child>
       <object class="GtkLabel">
-        <property name="visible">1</property>
         <property name="label" translatable="yes">New Account</property>
         <attributes>
           <attribute name="scale" value="3"/>
         </attributes>
       </object>
     </child>
-
     <child>
       <object class="GtkStack" id="content_stack">
-        <property name="visible">1</property>
         <property name="transition-type">slide-left-right</property>
         <child>
           <object class="GtkBox">
-            <property name="visible">1</property>
             <property name="orientation">vertical</property>
             <property name="spacing">24</property>
             <child>
               <object class="GtkLabel">
-                <property name="visible">1</property>
                 <property name="label" translatable="yes">To authenticate Corebird, you need a PIN from twitter.com with the account you wish to add</property>
                 <property name="xalign">0</property>
                 <property name="max-width-chars">20</property>
@@ -54,18 +46,15 @@
             </child>
             <child>
               <object class="GtkButton" id="request_pin_button">
-                <property name="visible">1</property>
                 <property name="label" translatable="yes">Request PIN</property>
                 <signal name="clicked" handler="request_pin_clicked_cb" swapped="no"/>
               </object>
             </child>
-
             <child>
               <object class="GtkLabel" id="info_label">
-                <property name="visible">1</property>
                 <property name="use-markup">1</property>
                 <style>
-                  <class name="dim-label" />
+                  <class name="dim-label"/>
                 </style>
               </object>
             </child>
@@ -74,17 +63,13 @@
             <property name="name">intro</property>
           </packing>
         </child>
-
         <child>
           <object class="GtkGrid">
-            <property name="visible">1</property>
             <property name="row-spacing">24</property>
             <property name="column-spacing">12</property>
             <property name="column-homogeneous">1</property>
-
             <child>
               <object class="GtkLabel">
-                <property name="visible">1</property>
                 <property name="label" translatable="yes">Enter PIN from twitter.com below:</property>
                 <property name="hexpand">1</property>
                 <property name="wrap-mode">word-char</property>
@@ -93,53 +78,44 @@
                 <property name="width-chars">20</property>
               </object>
               <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
+                <property name="left-attach">0</property>
+                <property name="top-attach">0</property>
                 <property name="width">2</property>
               </packing>
             </child>
-
-
             <child>
               <object class="GtkEntry" id="pin_entry">
-                <property name="visible">1</property>
                 <property name="placeholder-text" translatable="yes">PIN</property>
                 <property name="hexpand">1</property>
               </object>
               <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">1</property>
+                <property name="left-attach">0</property>
+                <property name="top-attach">1</property>
                 <property name="width">2</property>
               </packing>
             </child>
-
             <child>
               <object class="GtkButton">
-                <property name="visible">1</property>
                 <property name="label" translatable="yes">Retry</property>
-                <property name="halign">fill</property>
                 <signal name="clicked" handler="request_pin_clicked_cb" swapped="no"/>
               </object>
               <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">2</property>
+                <property name="left-attach">0</property>
+                <property name="top-attach">2</property>
               </packing>
             </child>
-
             <child>
               <object class="GtkButton" id="confirm_button">
-                <property name="visible">1</property>
                 <property name="label" translatable="yes">Confirm</property>
-                <property name="halign">fill</property>
                 <property name="sensitive">0</property>
                 <signal name="clicked" handler="confirm_button_clicked_cb" swapped="no"/>
                 <style>
-                  <class name="suggested-action" />
+                  <class name="suggested-action"/>
                 </style>
               </object>
               <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">2</property>
+                <property name="left-attach">1</property>
+                <property name="top-attach">2</property>
               </packing>
             </child>
           </object>
@@ -148,8 +124,8 @@
           </packing>
         </child>
       </object>
-    </child> <!-- End Stack -->
-
+    </child>
+    <!-- End Stack -->
     <child>
       <object class="GtkLabel" id="error_label">
         <property name="visible">0</property>
