--- a/ui/profile-page.ui
+++ b/ui/profile-page.ui
@@ -35,28 +35,23 @@
     <property name="hscrollbar-policy">never</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">1</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkStack" id="loading_stack">
-            <property name="visible">1</property>
             <property name="transition-type">crossfade</property>
             <child>
               <object class="GtkGrid">
-                <property name="visible">1</property>
-
                 <child>
                   <object class="AspectImage" id="banner_image">
                     <property name="visible">1</property>
                     <property name="can-focus">False</property>
                   </object>
                   <packing>
-                    <property name="left_attach">0</property>
-                    <property name="top_attach">0</property>
+                    <property name="left-attach">0</property>
+                    <property name="top-attach">0</property>
                     <property name="width">5</property>
                   </packing>
                 </child>
-
                 <child>
                   <object class="AvatarWidget" id="avatar_image">
                     <property name="visible">1</property>
@@ -74,16 +69,13 @@
                     <property name="top-attach">1</property>
                   </packing>
                 </child>
-
                 <child>
                   <object class="GtkBox">
-                    <property name="visible">1</property>
                     <property name="orientation">vertical</property>
                     <property name="valign">start</property>
                     <property name="margin-top">12</property>
                     <child>
                       <object class="GtkLabel" id="name_label">
-                        <property name="visible">1</property>
                         <property name="valign">start</property>
                         <property name="xalign">0</property>
                         <property name="ellipsize">end</property>
@@ -95,7 +87,6 @@
                     </child>
                     <child>
                       <object class="GtkLabel" id="screen_name_label">
-                        <property name="visible">1</property>
                         <property name="valign">start</property>
                         <property name="xalign">0</property>
                         <property name="label"> </property>
@@ -106,7 +97,6 @@
                     </child>
                     <child>
                       <object class="GtkLabel" id="location_label">
-                        <property name="visible">1</property>
                         <property name="xalign">0</property>
                         <property name="valign">start</property>
                         <property name="ellipsize">end</property>
@@ -121,7 +111,6 @@
                 <!-- Info box -->
                 <child>
                   <object class="GtkBox">
-                    <property name="visible">1</property>
                     <property name="orientation">vertical</property>
                     <child>
                       <object class="GtkBox">
@@ -132,7 +121,6 @@
                         </style>
                         <child>
                           <object class="GtkMenuButton" id="more_button">
-                            <property name="visible">1</property>
                             <property name="halign">end</property>
                             <property name="margin-top">14</property>
                             <property name="margin-start">6</property>
@@ -175,7 +163,6 @@
                 </child>
                 <child>
                   <object class="GtkLabel" id="description_label">
-                    <property name="visible">1</property>
                     <property name="margin-start">14</property>
                     <property name="margin-end">14</property>
                     <property name="margin-top">12</property>
@@ -214,12 +201,10 @@
                 </child>
                 <child>
                   <object class="GtkGrid">
-                    <property name="visible">1</property>
                     <property name="margin-top">6</property>
                     <property name="margin-bottom">6</property>
                     <child>
                       <object class="GtkRadioButton" id="tweets_button">
-                        <property name="visible">1</property>
                         <property name="hexpand">1</property>
                         <property name="draw-indicator">0</property>
                         <property name="relief">none</property>
@@ -229,11 +214,9 @@
                         <signal name="toggled" handler="tweets_button_toggled_cb"/>
                         <child>
                           <object class="GtkBox">
-                            <property name="visible">1</property>
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkLabel">
-                                <property name="visible">1</property>
                                 <property name="hexpand">1</property>
                                 <property name="label" translatable="yes">Tweets</property>
                                 <property name="justify">center</property>
@@ -244,7 +227,6 @@
                             </child>
                             <child>
                               <object class="GtkLabel" id="tweets_label">
-                                <property name="visible">1</property>
                                 <property name="hexpand">1</property>
                                 <property name="label">--</property>
                                 <property name="justify">center</property>
@@ -260,7 +242,6 @@
                     </child>
                     <child>
                       <object class="GtkRadioButton">
-                        <property name="visible">1</property>
                         <property name="hexpand">1</property>
                         <property name="group">tweets_button</property>
                         <property name="draw-indicator">0</property>
@@ -271,11 +252,9 @@
                         <signal name="toggled" handler="followers_button_toggled_cb"/>
                         <child>
                           <object class="GtkBox">
-                            <property name="visible">1</property>
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkLabel">
-                                <property name="visible">1</property>
                                 <property name="hexpand">1</property>
                                 <property name="label" translatable="yes">Followers</property>
                                 <property name="justify">center</property>
@@ -286,7 +265,6 @@
                             </child>
                             <child>
                               <object class="GtkLabel" id="followers_label">
-                                <property name="visible">1</property>
                                 <property name="hexpand">1</property>
                                 <property name="label">--</property>
                                 <property name="justify">center</property>
@@ -302,7 +280,6 @@
                     </child>
                     <child>
                       <object class="GtkRadioButton">
-                        <property name="visible">1</property>
                         <property name="hexpand">1</property>
                         <property name="group">tweets_button</property>
                         <property name="draw-indicator">0</property>
@@ -313,11 +290,9 @@
                         <signal name="toggled" handler="following_button_toggled_cb"/>
                         <child>
                           <object class="GtkBox">
-                            <property name="visible">1</property>
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkLabel">
-                                <property name="visible">1</property>
                                 <property name="hexpand">1</property>
                                 <property name="label" translatable="yes">Following</property>
                                 <property name="justify">center</property>
@@ -328,7 +303,6 @@
                             </child>
                             <child>
                               <object class="GtkLabel" id="following_label">
-                                <property name="visible">1</property>
                                 <property name="hexpand">1</property>
                                 <property name="label">--</property>
                                 <property name="justify">center</property>
@@ -344,7 +318,6 @@
                     </child>
                     <child>
                       <object class="GtkRadioButton">
-                        <property name="visible">1</property>
                         <property name="hexpand">1</property>
                         <property name="group">tweets_button</property>
                         <property name="draw-indicator">0</property>
@@ -355,11 +328,9 @@
                         <signal name="toggled" handler="lists_button_toggled_cb"/>
                         <child>
                           <object class="GtkBox">
-                            <property name="visible">1</property>
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkLabel">
-                                <property name="visible">1</property>
                                 <property name="hexpand">1</property>
                                 <property name="label" translatable="yes">Lists</property>
                                 <property name="justify">center</property>
@@ -370,7 +341,6 @@
                             </child>
                             <child>
                               <object class="GtkLabel">
-                                <property name="visible">1</property>
                                 <property name="hexpand">1</property>
                                 <property name="justify">center</property>
                               </object>
@@ -393,7 +363,6 @@
                 </child>
                 <child>
                   <object class="GtkSeparator">
-                    <property name="visible">1</property>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -409,7 +378,6 @@
             <!-- End of Grid -->
             <child>
               <object class="GtkSpinner" id="progress_spinner">
-                <property name="visible">1</property>
                 <property name="width-request">16</property>
                 <property name="height-request">16</property>
                 <property name="halign">center</property>
@@ -421,7 +389,6 @@
             </child>
             <child>
               <object class="GtkLabel" id="loading_error_label">
-                <property name="visible">1</property>
                 <property name="margin">24</property>
                 <property name="wrap">1</property>
               </object>
@@ -430,7 +397,6 @@
         </child>
         <child>
           <object class="GtkStack" id="user_stack">
-            <property name="visible">1</property>
             <property name="transition-type">crossfade</property>
             <property name="vhomogeneous">0</property>
             <child>
