--- a/ui/account-dialog.ui
+++ b/ui/account-dialog.ui
@@ -11,29 +11,24 @@
     <property name="destroy-with-parent">1</property>
     <property name="type-hint">dialog</property>
     <property name="resizable">false</property>
-
     <child type="titlebar">
       <object class="GtkHeaderBar">
-        <property name="visible">1</property>
         <property name="title" translatable="yes">Account Settings</property>
-
         <child>
           <object class="GtkButton" id="cancel_button">
-            <property name="visible">1</property>
             <property name="can-focus">1</property>
             <property name="label" translatable="yes">Cancel</property>
-            <signal name="clicked" handler="cancel_button_clicked_cb" />
+            <signal name="clicked" handler="cancel_button_clicked_cb"/>
           </object>
         </child>
         <child>
           <object class="GtkButton" id="save_button">
             <property name="can-focus">1</property>
-            <property name="visible">1</property>
             <property name="label" translatable="yes">Save</property>
             <property name="can-default">1</property>
-            <signal name="clicked" handler="save_button_clicked_cb" />
+            <signal name="clicked" handler="save_button_clicked_cb"/>
             <style>
-              <class name="suggested-action" />
+              <class name="suggested-action"/>
             </style>
           </object>
           <packing>
@@ -42,15 +37,12 @@
         </child>
       </object>
     </child>
-
     <child>
       <object class="GtkStack" id="content_stack">
-        <property name="visible">1</property>
         <property name="transition-type">slide-left-right</property>
-        <property name="homogeneous">false</property>
+        <property name="homogeneous">0</property>
         <child>
           <object class="GtkBox" id="info_box">
-            <property name="visible">1</property>
             <property name="orientation">vertical</property>
             <!-- Avatar -->
             <child>
@@ -58,21 +50,19 @@
                 <property name="visible">true</property>
                 <property name="can-focus">true</property>
                 <property name="hexpand">true</property>
-                <signal name="avatar-clicked" handler="avatar_clicked_cb" />
-                <signal name="banner-clicked" handler="banner_clicked_cb" />
+                <signal name="avatar-clicked" handler="avatar_clicked_cb"/>
+                <signal name="banner-clicked" handler="banner_clicked_cb"/>
               </object>
             </child>
             <!-- Main stack -->
             <child>
               <object class="GtkStack" id="delete_stack">
-                <property name="visible">1</property>
                 <property name="transition-type">crossfade</property>
                 <property name="margin-top">24</property>
                 <property name="margin-bottom">24</property>
                 <!-- Data grid -->
                 <child>
                   <object class="GtkGrid">
-                    <property name="visible">1</property>
                     <property name="halign">center</property>
                     <property name="valign">start</property>
                     <property name="row-spacing">6</property>
@@ -83,7 +73,6 @@
                     <!-- Real Name -->
                     <child>
                       <object class="GtkLabel">
-                        <property name="visible">1</property>
                         <property name="label" translatable="yes">Name</property>
                         <property name="halign">end</property>
                         <property name="valign">baseline</property>
@@ -98,7 +87,6 @@
                     </child>
                     <child>
                       <object class="GtkEntry" id="name_entry">
-                        <property name="visible">1</property>
                         <property name="can-focus">1</property>
                         <property name="halign">start</property>
                         <property name="valign">baseline</property>
@@ -112,7 +100,6 @@
                     <!-- URL -->
                     <child>
                       <object class="GtkLabel">
-                        <property name="visible">1</property>
                         <property name="label" translatable="yes">Website</property>
                         <property name="halign">end</property>
                         <property name="valign">baseline</property>
@@ -127,7 +114,6 @@
                     </child>
                     <child>
                       <object class="GtkEntry" id="website_entry">
-                        <property name="visible">1</property>
                         <property name="can-focus">1</property>
                         <property name="halign">start</property>
                         <property name="valign">baseline</property>
@@ -140,10 +126,8 @@
                     <!-- Description -->
                     <child>
                       <object class="GtkFrame">
-                        <property name="visible">1</property>
                         <child>
                           <object class="GtkScrolledWindow">
-                            <property name="visible">1</property>
                             <property name="min-content-height">80</property>
                             <child>
                               <object class="CompletionTextView" id="description_text_view">
@@ -164,19 +148,17 @@
                     </child>
                     <child>
                       <object class="GtkLabel" id="description_length_label">
-                        <property name="visible">1</property>
                         <property name="xalign">1</property>
                       </object>
                       <packing>
-                        <property name="left_attach">0</property>
-                        <property name="top_attach">3</property>
+                        <property name="left-attach">0</property>
+                        <property name="top-attach">3</property>
                         <property name="width">2</property>
                       </packing>
                     </child>
                     <!-- Autostart switch -->
                     <child>
                       <object class="GtkLabel">
-                        <property name="visible">1</property>
                         <property name="label" translatable="yes">Autostart</property>
                         <property name="halign">end</property>
                         <property name="valign">baseline</property>
@@ -192,7 +174,6 @@
                     </child>
                     <child>
                       <object class="GtkSwitch" id="autostart_switch">
-                        <property name="visible">1</property>
                         <property name="can-focus">1</property>
                         <property name="halign">start</property>
                         <property name="valign">baseline</property>
@@ -207,7 +188,6 @@
                     <child>
                       <object class="GtkButton" id="delete_button">
                         <property name="can-focus">1</property>
-                        <property name="visible">1</property>
                         <property name="label" translatable="yes">Delete</property>
                         <property name="margin-top">12</property>
                         <signal name="clicked" handler="delete_button_clicked_cb"/>
@@ -226,13 +206,11 @@
                 <!-- Delete Grid -->
                 <child>
                   <object class="GtkGrid">
-                    <property name="visible">1</property>
                     <property name="column-spacing">12</property>
                     <property name="column-homogeneous">1</property>
                     <property name="halign">center</property>
                     <child>
                       <object class="GtkLabel" id="delete_label">
-                        <property name="visible">1</property>
                         <property name="halign">center</property>
                         <property name="margin-bottom">12</property>
                         <property name="margin-top">12</property>
@@ -250,7 +228,6 @@
                     </child>
                     <child>
                       <object class="GtkButton" id="delete_cancel_button">
-                        <property name="visible">1</property>
                         <property name="can-focus">1</property>
                         <property name="label" translatable="yes">Cancel</property>
                         <property name="halign">end</property>
@@ -263,7 +240,6 @@
                     </child>
                     <child>
                       <object class="GtkButton" id="delete_confirm_button">
-                        <property name="visible">1</property>
                         <property name="can-focus">1</property>
                         <property name="label" translatable="yes">Delete</property>
                         <property name="halign">start</property>
@@ -286,7 +262,6 @@
             </child>
           </object>
         </child>
-
         <child>
           <object class="CropWidget" id="crop_widget">
             <property name="visible">true</property>
@@ -296,19 +271,17 @@
             <property name="halign">fill</property>
           </object>
         </child>
-
         <child>
           <object class="GtkLabel" id="error_label">
-            <property name="visible">1</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
-            <property name="wrap">true</property>
+            <property name="wrap">1</property>
             <property name="wrap-mode">word-char</property>
             <property name="margin">24</property>
           </object>
         </child>
-
       </object>
-    </child> <!-- Stack -->
+    </child>
+    <!-- Stack -->
   </template>
 </interface>
