--- a/ui/new-list-entry.ui
+++ b/ui/new-list-entry.ui
@@ -2,19 +2,16 @@
 <interface>
   <template class="NewListEntry" parent="GtkListBoxRow">
     <property name="visible">1</property>
-    <property name="can_focus">1</property>
+    <property name="can-focus">1</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">1</property>
         <property name="orientation">vertical</property>
         <property name="margin-top">4</property>
         <property name="margin-bottom">4</property>
         <child>
           <object class="GtkBox">
-            <property name="visible">1</property>
             <child>
               <object class="GtkImage">
-                <property name="visible">1</property>
                 <property name="halign">end</property>
                 <property name="hexpand">1</property>
                 <property name="pixel-size">32</property>
@@ -23,7 +20,6 @@
             </child>
             <child>
               <object class="GtkLabel">
-                <property name="visible">1</property>
                 <property name="halign">start</property>
                 <property name="margin-start">6</property>
                 <property name="hexpand">1</property>
@@ -37,15 +33,12 @@
         </child>
         <child>
           <object class="GtkRevealer" id="revealer">
-            <property name="visible">1</property>
             <child>
               <object class="GtkBox">
-                <property name="visible">1</property>
                 <property name="spacing">12</property>
                 <property name="margin-bottom">6</property>
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">1</property>
                     <property name="valign">baseline</property>
                     <property name="margin-start">6</property>
                     <property name="label" translatable="yes">Name:</property>
@@ -53,7 +46,6 @@
                 </child>
                 <child>
                   <object class="GtkEntry" id="list_name_entry">
-                    <property name="visible">1</property>
                     <property name="can-focus">1</property>
                     <property name="valign">baseline</property>
                     <property name="hexpand">1</property>
@@ -65,7 +57,6 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="create_list_button">
-                    <property name="visible">1</property>
                     <property name="can-focus">1</property>
                     <property name="receives-default">1</property>
                     <property name="valign">baseline</property>
